tests/ui/modulo_one.stderr
error: any number modulo 1 will be 0
 --> $DIR/modulo_one.rs:7:5
  |
7 |     10 % 1;
  |     ^^^^^^
  |
note: lint level defined here
 --> $DIR/modulo_one.rs:3:9
  |
3 | #![deny(modulo_one)]
  |         ^^^^^^^^^^

error: aborting due to previous error

